--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.26",
